--- a/salles/model-bak.html
+++ b/salles/model-bak.html
@@ -17,7 +17,7 @@
 
 
 <body id='main'>
-    <div id="header">
+    <div id="header-extpage">
     <div class="container">
         <div class="row">
             <div class="col-12">
@@ -32,28 +32,34 @@
             </div>
         </div>
     </div>
-    <div class="container-fluid">
-        <div class="row">
-            <div class="col-12">
-                <img src="../assets/img/issou3.png" alt="ISSOU JPP">
+    <section id="content">
+        <div class="container-fluid">
+            <div class="row">
+            <h1 class="col-8 mx-auto centre titre-section">Titre du thème</h1>
+            </div>
+            <div class="row">
+                <div class="col-12">
+                    <img src="assets/img/salle1.jpg">
+                </div>
             </div>
         </div>
-    </div>
-    </div>
+        </div>
 
-    <div class="container">
-        <div class="row" id="texte">
-            <div class="col-12">
-                <p>
-                    In hac habitasse platea dictumst. Praesent placerat, odio id elementum finibus, ligula mauris rutrum dui, et suscipit quam arcu a tortor. Proin fringilla venenatis scelerisque. Nunc leo tellus, tincidunt vitae nulla in, sodales fermentum lectus. Aenean interdum finibus enim, sed imperdiet lacus pharetra eu. Curabitur ex libero, ullamcorper vitae condimentum nec, lacinia nec ex. Integer pellentesque, ipsum eu interdum maximus, massa metus tincidunt nibh, sed placerat neque enim sit amet est. Phasellus suscipit, enim nec condimentum condimentum, ante orci consequat sapien, eu pellentesque magna massa non nunc. Nulla ut elementum urna, eget vulputate purus.
-                </p>
+        <div class="container">
+            <div class="row" id="texte">
+                <div class="col-12">
+                    <p>
+                        In hac habitasse platea dictumst. Praesent placerat, odio id elementum finibus, ligula mauris rutrum dui, et suscipit quam arcu a tortor. Proin fringilla venenatis scelerisque. Nunc leo tellus, tincidunt vitae nulla in, sodales fermentum lectus. Aenean interdum finibus enim, sed imperdiet lacus pharetra eu. Curabitur ex libero, ullamcorper vitae condimentum nec, lacinia nec ex. Integer pellentesque, ipsum eu interdum maximus, massa metus tincidunt nibh, sed placerat neque enim sit amet est. Phasellus suscipit, enim nec condimentum condimentum, ante orci consequat sapien, eu pellentesque magna massa non nunc. Nulla ut elementum urna, eget vulputate purus.
+                    </p>
 
-                <p>
-                    Nam velit tellus, interdum in elit in, interdum viverra ipsum. Quisque placerat est et vulputate viverra. Mauris vel leo a sapien feugiat maximus. Duis cursus gravida accumsan. Aliquam erat volutpat. Maecenas posuere odio venenatis mattis luctus. Vivamus eu diam felis. Mauris molestie rhoncus erat in feugiat. Nam commodo sem ac elit fringilla bibendum. Maecenas et tellus sed sem euismod porta. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; In ornare turpis purus. In id sapien non erat egestas elementum. Sed lacinia sit amet arcu ac venenatis.
-                </p>
+                    <p>
+                        Nam velit tellus, interdum in elit in, interdum viverra ipsum. Quisque placerat est et vulputate viverra. Mauris vel leo a sapien feugiat maximus. Duis cursus gravida accumsan. Aliquam erat volutpat. Maecenas posuere odio venenatis mattis luctus. Vivamus eu diam felis. Mauris molestie rhoncus erat in feugiat. Nam commodo sem ac elit fringilla bibendum. Maecenas et tellus sed sem euismod porta. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; In ornare turpis purus. In id sapien non erat egestas elementum. Sed lacinia sit amet arcu ac venenatis.
+                    </p>
+                </div>
             </div>
         </div>
-    </div>
+
+    </section>
 
     <footer class="container-fluid">
         <div class="row" id="footer-theme">
@@ -70,7 +76,7 @@
             </div>
             <div class="col-4">
                 <p>
-                Contactez-nous <brbr/>
+                Contactez-nous :<br/>
                 lockedin60@gmail.com
                 </p>
             </div>
