Nettoyage fichiers phase 1

--- a/salles/asylum.html
+++ b/salles/asylum.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="../assets/lib/fontawesome/css/all.min.css">
     <link rel="stylesheet" href="../assets/css/style.css" type="text/css">
     <script type="text/javascript">
-        window.location.href = '../index.html#pages/bastille'
+        window.location.href = '../index.html#salles/asylum'
     </script>
 </head>
 
@@ -50,7 +50,7 @@
     <div class="row description-salle">
         <div class="col-12">
             <p>
-                Vous avez quelques problèmes dans votre vie. Rien de grave, enfin, vous ne savez pas, c’est votre thérapeute qui vous le dira. Arrivé dans son bureau, rien d’anormal ne saute à vos yeux. Le docteur Roussel est très sympathique. Votre session se passe sans encombre et vous rentrez.
+                Vous avez quelques problèmes dans votre vie. Rien de grave, enfin, vous ne savez pas. C’est votre thérapeute qui vous le dira. Vous avez d’ailleurs rendez-vous aujourd’hui. Arrivé dans son bureau, rien d’anormal ne saute à vos yeux. Le docteur Roussel est très sympathique. Votre session se passe sans encombre, et bonne nouvelle, vous n’êtes pas fou, juste un peu stressé. Il vous a d’ailleurs prescrit des anti-dépresseurs à prendre immédiatement. Vous rentrez chez vous tranquillement juste après.
             </p>
             <p>
                 Vous vous réveillez. Étrange, vous ne vous rappelez de rien après votre rendez-vous chez le thérapeute.
