--- a/salles/titanic.html
+++ b/salles/titanic.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="../assets/lib/fontawesome/css/all.min.css">
     <link rel="stylesheet" href="../assets/css/style.css" type="text/css">
     <script type="text/javascript">
-        window.location.href = '../index.html#pages/bastille'
+        window.location.href = '../index.html#salles/titanic'
     </script>
 </head>
 
@@ -38,7 +38,7 @@
     <section id="content">
         <div class="container-fluid">
             <div class="row">
-                <h1 class="col-8 mx-auto centre titre-section nom-theme">Prisonniers de la Bastille</h1>
+                <h1 class="col-8 mx-auto centre titre-section nom-theme">La légende du Titanic</h1>
             </div>
             <div class="row">
                 <div class="col-12 image-header" style="background-image: url(assets/img/salle1.jpg)">
@@ -75,7 +75,7 @@
 </div>
 <div class="row section-resa">
     <div class="col-12 resa-button-wrapper">
-        <a href="" class="resa-button" style="transform: scale(0.8)">Réserver</a>
+        <a href="#pages/resa" class="resa-button" style="transform: scale(0.8)">Réserver</a>
     </div>
 </div>
 
