--- a/pages/resa.html
+++ b/pages/resa.html
@@ -17,6 +17,9 @@
     <script defer src="../assets/lib/jquery/jquery.min.js"></script>
     <script defer src="../assets/lib/jquery-validation/jquery.validate.js"></script>
     <script defer src="../assets/js/form.js"></script>
+    <script type="text/javascript">
+        window.location.href = '../index.html#pages/resa'
+    </script>
 </head>
 
 
