--- a/salles/bastille.html
+++ b/salles/bastille.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="../assets/lib/fontawesome/css/all.min.css">
     <link rel="stylesheet" href="../assets/css/style.css" type="text/css">
     <script type="text/javascript">
-        window.location.href = '../index.html#pages/bastille'
+        window.location.href = '../index.html#salles/bastille'
     </script>
 </head>
 
@@ -53,16 +53,17 @@
                 1789. La Révolution gronde dans la France entière.
             </p>
             <p>
-                Bonnet phrygien sur la tête, le poing levée, criant à plein poumon, vous êtes les chefs de ces émeutes.
-                Vous rêvez d’une France libre, de droits égaux, et d’une union des citoyens.
+                Bonnet phrygien sur la tête, le poing levée, criant à plein poumon, vous êtes les chefs de ces émeutes. <br>
+                Déambulants dans Grenoble, vous êtes les leaders du mouvement. Les rêveurs de ce peuple. Les libres penseurs de votre génération. <br>
+                Vous rêvez d’une France libre, de droits égaux, et d’une union des citoyens. <br>
                 Vous rêvez de liberté, d’égalité, de fraternité.
             </p>
             <p>
-                Mais personne ne vous écoute, personne ne vous entend. Vous n’avez pas d’autres choix que d’employer la manière forte : les fusils, les lance pierres, le combat au corps à corps, tout est permis.
-                Tout est permis mais seulement de votre point de vue puisque très vite, vous êtes arrêté et mis en prison. Pas n’importe quelle prison : la Bastille de Grenoble. Grande, sombre, dans les montagnes, avec les meilleurs gardes de la région et dont personne ne s’est encore évadé.
+                Mais personne ne vous écoute, personne ne vous entend. Le gouvernement ne vous voit pas, ne vous considère toujours pas. Vous n’avez pas d’autres choix que d’employer la manière forte : les fusils, les lance pierres, le combat au corps à corps, tout est permis. Vous êtes près à mettre à sang et à feu votre ville, si c’est le seul moyen de vous faire reconnaître, de prendre le pouvoir. Un seul but, faire tomber la monarchie. Le roi a tout, vous n’avez rien. L’heure de la justice a sonnée. <br>
+                Tout est permis mais seulement de votre point de vue puisque très vite, vous êtes arrêté et mis en prison. Pas n’importe quelle prison : la Bastille de Grenoble. Grande, sombre, dans les montagnes, avec les meilleurs gardes de la région et dont personne ne s’est encore évadé. En effet, ces soldats ne vous quitterons pas des yeux et fixerons vos moindres mouvements.
             </p>
             <p>
-                Mais votre chance arrive : débordés, les gardes s’absentent. C’est le moment de sortir, mais comment, par où, et avec quoi ? C’est à vous de trouver.
+                Mais votre chance arrive : débordés, les gardes s’absentent. C’est le moment de sortir, mais comment, par où, et avec quoi ? C’est à vous de trouver par des énigmes, des recherches et de la réflexion, en équipe.
             </p>
             <p id="gras">
                 Mais dépêchez-vous car dans soixante minutes, les gardes reviennent, et s’ils vous attrapent, c’est la guillotine assurée ! <br> <br>
@@ -75,7 +76,7 @@
 </div>
 <div class="row section-resa">
     <div class="col-12 resa-button-wrapper">
-        <a href="" class="resa-button" style="transform: scale(0.8)">Réserver</a>
+        <a href="#pages/resa" class="resa-button" style="transform: scale(0.8)">Réserver</a>
     </div>
 </div>
 
