--- a/salles/titanic.html
+++ b/salles/titanic.html
@@ -41,7 +41,7 @@
                 <h1 class="col-8 mx-auto centre titre-section nom-theme">La légende du Titanic</h1>
             </div>
             <div class="row">
-                <div class="col-12 image-header" style="background-image: url(assets/img/salle1.jpg)">
+                <div class="col-12 image-header" style="background-image: url(assets/img/titanic2.jpg)">
                 </div>
             </div>
         </div>
@@ -50,25 +50,35 @@
     <div class="row description-salle">
         <div class="col-12">
             <p>
-                1789. La Révolution gronde dans la France entière.
+                Vous arrivez au port, et avez comme objectif d’arriver à New-York. Vous voulez une meilleure vie. <br>
+                Vous voulez une vraie vie. <br>
+                Le rêve américain est à quelques heures seulement.
             </p>
             <p>
-                Bonnet phrygien sur la tête, le poing levée, criant à plein poumon, vous êtes les chefs de ces émeutes.
-                Vous rêvez d’une France libre, de droits égaux, et d’une union des citoyens.
-                Vous rêvez de liberté, d’égalité, de fraternité.
+                Sans argent, sans papiers, vous entrez clandestinement avec votre famille sur le légendaire Titanic. Vous avez réussi tant bien que mal à vous cacher dans la cave du bateau. Par chance, elle était encore ouverte. Les heures passent et vous vous assoupissez, fatigués.
             </p>
             <p>
-                Mais personne ne vous écoute, personne ne vous entend. Vous n’avez pas d’autres choix que d’employer la manière forte : les fusils, les lance pierres, le combat au corps à corps, tout est permis.
-                Tout est permis mais seulement de votre point de vue puisque très vite, vous êtes arrêté et mis en prison. Pas n’importe quelle prison : la Bastille de Grenoble. Grande, sombre, dans les montagnes, avec les meilleurs gardes de la région et dont personne ne s’est encore évadé.
+                Vous vous réveillez en sursaut, un énorme bruit, un mouvement brusque vous sort de votre sommeil profond. Que se passe-t-il ? <br>
+                Vous entendez crier, hurler, paniquer. “Chers passagers, un accident est survenu. Le bateau a percuté un iceberg. La voix du capitaine résonne : “Nous vous demandons de rester calme et de vous diriger le plus vite possible vers les canots de sauvetage”.
             </p>
             <p>
-                Mais votre chance arrive : débordés, les gardes s’absentent. C’est le moment de sortir, mais comment, par où, et avec quoi ? C’est à vous de trouver.
+                Vous allez couler, vous allez sûrement mourir noyé si vous ne sortez pas d’ici. <br>
+                Problème, très gros problème : la porte est fermée. <br>
+                Toutes les issues sont fermées. <br>
+                L’équipage, ignorant votre présence, a tout verrouillé pendant votre sommeil.
+            </p>
+            <p>
+                Vous pouvez taper à la porte, mais personne ne vous entendra. Vous pouvez enfoncer la porte, mais ça ne marchera pas. Vous pouvez crier à l’aide, personne ne vous aidera. Ils vous laisseront couler avec le paquebot, car après tout, qui sauverait un clandestin ?
+            </p>
+            <p>
+                Votre seul moyen, pour survivre est de vous entraider, vous ne pouvez compter que sur vous et votre équipe. <br>
+                Sortez de cette cave et évacuez le bateau avant qu’il ne soit trop tard. Vous n’avez que 60 minutes pour sortir, si vous ne voulez pas couler au fin fond des abysses. Cherchez bien, réfléchissez, les solutions sont tout près.
             </p>
             <p id="gras">
-                Mais dépêchez-vous car dans soixante minutes, les gardes reviennent, et s’ils vous attrapent, c’est la guillotine assurée ! <br> <br>
+               Les minutes du Titanic et les vôtres sont comptées, bonne chance ! <br> <br>
             </p>
             <p id="avertissement">
-                <i>Ne convient pas aux enfants de moins de 14 ans</i>
+                <i>Ne convient pas aux enfants de moins de 12 ans</i>
             </p>
         </div>
     </div>
