--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
                             </div>
                         </div>
                         <div class="col-lg-6">
-                            <div class="image"></div>
+                            <div class="image" style="background-image: url(assets/img/room.jpg)"></div>
                         </div>
                     </div>
                     <div class="row">
