--- a/index.html
+++ b/index.html
@@ -8,8 +8,7 @@
     <title>Locked in 60'</title>
 
     <link rel="stylesheet" href="assets/lib/bootstrap/css/bootstrap.min.css">
-    <link rel="stylesheet" href="assets/fonts/aliseo.css">
-    <link href="https://fonts.googleapis.com/css?family=Montserrat:200,300,400,600,700|Open+Sans:300,400,600,700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="assets/fonts/fonts.css">
 
     <link rel="stylesheet" href="assets/lib/fontawesome/css/all.min.css">
     <link rel="stylesheet" href="assets/css/style.css" type="text/css">
@@ -161,7 +160,7 @@
                       <div class="col-lg-4">
                             <a href="#salles/bastille">
                                 <div class="card" style="width: 18rem;">
-                                    <span class="card-img-top" style="background-image: url(assets/img/salle1.jpg)"></span>
+                                    <span class="card-img-top" style="background-image: url(assets/img/bastille1.jpg)"></span>
                                     <div class="card-body">
                                         <h5 class="card-title">Prisonniers de la Bastille</h5>
                                         <p class="card-text">Salle 1</p>
