--- a/salles/bastille.html
+++ b/salles/bastille.html
@@ -7,8 +7,8 @@
     <title>Locked in 60'</title>
 
     <link rel="stylesheet" href="../assets/lib/bootstrap/css/bootstrap.min.css">
-    <link rel="stylesheet" href="../assets/fonts/aliseo.css">
-    <link href="https://fonts.googleapis.com/css?family=Montserrat:200,300,400,600,700|Open+Sans:300,400,600,700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="../assets/fonts/fonts.css">
+<!--    <link href="https://fonts.googleapis.com/css?family=Montserrat:200,300,400,600,700|Open+Sans:300,400,600,700&display=swap" rel="stylesheet">-->
 
     <link rel="stylesheet" href="../assets/lib/fontawesome/css/all.min.css">
     <link rel="stylesheet" href="../assets/css/style.css" type="text/css">
@@ -41,7 +41,7 @@
                 <h1 class="col-8 mx-auto centre titre-section nom-theme">Prisonniers de la Bastille</h1>
             </div>
             <div class="row">
-                <div class="col-12 image-header" style="background-image: url(assets/img/salle1.jpg)">
+                <div class="col-12 image-header" style="background-image: url(assets/img/bastille2.jpg)">
                 </div>
             </div>
         </div>
