Deploiement mercredi Soir

--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@
                 </div>
 
                 <footer class="container-fluid" id="footer-accueil">
-                    <div id="chiffres-clefooter">
+                    <div id="cont-footer">
                         <div class="row">
                             <div class="col-4">
                                 <h1 class="titre-footer">Contactez-nous</h1>
@@ -288,29 +288,8 @@
                 </div>
             </div>
             <div id="extpage-content">
-
+<!--Contenu généré par Jquery-->
             </div>
-            <footer class="container-fluid">
-                <div class="row" id="footer-theme">
-                    <div class="col-4 center">
-                        <p class="social-net">
-                            <span>Suivez-nous : </span>
-                            <a href='' class="fa-2x fab fa-facebook lien-sn"></a>
-                            <a href='' class="fa-2x fab fa-twitter lien-sn"></a>
-                            <a href='' class="fa-2x fab fa-instagram lien-sn"></a>
-                        </p>
-                    </div>
-                    <div class="col-4" class="mentions">
-                        <p>blabla mentions légales blabla</p>
-                    </div>
-                    <div class="col-4">
-                        <p>
-                            Contactez-nous :<br/>
-                            lockedin60@gmail.com
-                        </p>
-                    </div>
-                </div>
-            </footer>
             <div id="transi-cache-extpage"></div>
         </div>
         <div id="transi-cache-menu"></div>
