--- a/salles/bastille.html
+++ b/salles/bastille.html
@@ -66,7 +66,7 @@
                 Mais votre chance arrive : débordés, les gardes s’absentent. C’est le moment de sortir, mais comment, par où, et avec quoi ? C’est à vous de trouver par des énigmes, des recherches et de la réflexion, en équipe.
             </p>
             <p id="gras">
-                Mais dépêchez-vous car dans soixante minutes, les gardes reviennent, et s’ils vous attrapent, c’est la guillotine assurée ! <br> <br>
+                Mais dépêchez-vous car dans soixante minutes les gardes reviennent, et s’ils vous attrapent, c’est la guillotine assurée ! <br> <br>
             </p>
             <p id="avertissement">
                 <i>Ne convient pas aux enfants de moins de 14 ans</i>
